--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Insira uma Url para Gerar seu Qr code</p>
       </header>
       <main class="form">
-        <input type="text" placeholder="Insira aqui">
+        <input type="text" placeholder="Insira aqui um Texto ou uma Url">
         <button>Gerar Qr Code</button>
       </main>
       <footer class="qr-code">
