--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="Gerador de senhas, gerator password">
+  <link rel="icon" href="./assets/code.png" type="imagemDoLogoEmPng">
   <title>Gerador de QR Code</title>
 
   <link rel="stylesheet" href="./style.css">
