--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="Gerador de senhas, gerator password">
   <link rel="icon" href="./assets/code.png" type="imagemDoLogoEmPng">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Arsenal:ital@1&family=Roboto:ital,wght@0,400;0,500;1,400&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <title>Gerador de QR Code</title>
-
   <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-   <div class="container">
-      <header>
-        <h1>Gerador de Qr Code</h1>
-        <p>Insira uma Url para Gerar seu Qr code</p>
-      </header>
-      <main class="form">
-        <input type="text" placeholder="Insira aqui um Texto ou uma Url">
-        <button>Gerar Qr Code</button>
-      </main>
-      <footer class="qr-code">
-          <img src="" alt="" class="img">
-      </footer>
+  <div class="container">
+    <header>
+      <h1>Gerador de Qr Code</h1>
+      <p>Insira uma Url para Gerar seu Qr code</p>
+    </header>
+    <main class="form">
+      <input type="text" placeholder="Insira aqui">
+      <button>Gerar Qr Code</button>
+    </main>
+    <footer class="qr-code">
+      <img src="" alt="" class="img">
+    </footer>
 
-   </div>
+  </div>
 
-    <script src="./index.js"></script>
+  <script src="./index.js"></script>
 </body>
+
 </html>
